config/instances/manuela-quickstart/line-dashboard/line-dashboard-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: manuela-quickstart-line-dashboard
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
    argocd.argoproj.io/managed-by: openshift-gitops
